# OdooUpgrader

./: .gitignore  README.md  pyproject.toml
.github/workflows/: upgrade-test-macos.yml  upgrade-test-ubuntu.yml  upgrade-test-windows.yml
src/odooupgrader/: __init__.py  cli.py  core.py
